--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.19.2",
     "onoff": "^6.0.3",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
